# MoBRISK

./: CMakeLists.txt  README.md  brisk_install.sh  opencv_install.sh
include/: BagOfWordsRepresentation.h  Clustering.h  MoFREAKUtilities.h
src/: BagOfWordsRepresentation.cpp  Clustering.cpp  MoFREAKUtilities.cpp  MoSIFTUtilities.cpp  SVMInterface.cpp  main.cpp  svm.cpp  svm_interface.cpp
